--- a/404.html
+++ b/404.html
@@ -63,6 +63,7 @@
     <section class="u-align-center u-clearfix u-palette-5-light-2 u-section-1" src="" id="sec-1edc">
       <h1 class="u-text u-text-1">Kheylek Consulting Services</h1>
       <p class="u-text u-text-2">Experts in building collaborative user experiences for small, medium and enterprise organisations with SharePoint, Power Automate, Power Apps and Office 365.</p>
+      <p class="u-text u-text-2">404 - The page requested could not be found</p>
       <img class="u-expanded-width u-image u-image-1" src="images/fdrt-min.jpg" data-image-width="1920" data-image-height="992">
       <div class="u-clearfix u-gutter-30 u-layout-wrap u-layout-wrap-1">
         <div class="u-layout">
